Optimise hot-path allocations and redundant computations
- LivingEntityMixin: cache maxSpeedSq and speedGate locals after reading
  cfg so the four per-tick multiplications are computed once; hoist
  BlockParticleOption outside the dust loop; cache wingVortex() result
  to avoid triple method call in the tick%2 branch
- GroundEffectTask: replace getHighestBlockAt().getY() with
  getHighestBlockYAt() (eliminates one Block allocation per player per
  tick); pre-size toArray hint to avoid double allocation; replace all
  new Location(world,x,y,z) arguments in spawnParticle calls with raw
  double overloads (up to ~26 transient objects eliminated per player
  per tick at peak)
- SlipstreamPlugin: extract serializePayload() so sendConfig and
  sendDisabledConfig share one canonical field-order definition;
  broadcastConfig now builds the byte[] once and reuses it for all
  players instead of allocating N stream pairs with 6N YAML lookups;
  drop Collectors import, use Stream.toList()
- Both GroundEffectMath: sync proximity() formula — Paper copy now
  includes the 3-block flat buffer zone matching the Fabric
  implementation; buffer capped at effectHeight-1 to stay valid for
  small configured heights